@@ -1,6 +1,7 @@
 0.8-3
+- subset.oce() handles section objects
 - draw.section(): permit xtype="latitude" or "longitude"
-- imagpe(): add drawPalette="space" option
+- imagpe() has drawPalette="space" option
 
 0.8-2
 - fix bug in read.coastline(), reversing lon and lat [issue162]
